# graphgym

./: README.md  example.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
src/graphgym/: graphgym.py
