[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "graphgym"
version = "0.0.1"
authors = [
  { name="Julius Hietala", email="julius.hietala@gmail.com" },
]
description = "GraphGym"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask-graphql==2.0.1",
    "graphene==2.1.9",
    "flask-cors",
    "graphene-sqlalchemy==2.3.0",
    "gymnasium[classic-control, box2d]"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
